<resources
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="MissingTranslation">
    <string name="app_name">HOMEドミネーター</string>
    <string name="accessibility_service_description">
        Sasukeのaccessibility補助APP、このサービスによって、HOMEを長押しすると事前設定済みの動作が便利に実行できます
    </string>
    <string name="unavailable">無効</string>
    <string name="available">有効</string>
    <string name="lock">ロック</string>
    <string name="power_long_press">パワー長押し</string>
    <string name="change_file_name">JPG変換</string>
    <string name="file_changed_success">個ファイル変換完了</string>
    <string name="no_file_can_change">変換するファイルはありません</string>
    <string name="directory">ディレクトリ：</string>
    <string name="screen_lock">スクリーンロック</string>
    <string name="screen_shot">スクリーンショット</string>
    <string name="settings">設定</string>
    <string name="notifi">通知領域</string>
    <string name="power_menu">パワーメニュー</string>
    <string name="setting_success">に設定しました</string>
    <string name="turn_on_dialog_alert">本アプリは無障害の特性を利用するため、スイッチをONにして下さい</string>
    <string name="go_now">今行く</string>
    <string name="permission_allow">パーミッションを許可してください</string>
    <string name="water_mark">ウォーターマーク</string>
    <string name="timeout">遅延</string>
    <string name="home_dominator_service">HOMEドミネーター用のサービス</string>
    <string name="scr_shot_tile">クソスクショ</string>
    <string name="lock_scr_tile">クソロック</string>
    <string name="fuck_brightness_tile">輝度覆し</string>
    <string name="any_tile">万能タイル</string>
    <string name="power_long_tile">クソパワー</string>
    <string name="setting_success_toast">設定が保存されました</string>
    <string name="water_mark_front">ネーム</string>
    <string name="water_mark_end">ブランド</string>
    <string name="water_pos">位置</string>
    <string name="water_card_img">背景カード</string>
    <string name="water_text_black">反色文字</string>
    <string name="is_resume_default_card">デフォルト に戻しますか？</string>
    <string name="yes">はい</string>
    <string name="sha_rin_gan">写輪眼</string>
    <string name="is_sys_app_show">システムアプリの表示</string>
    <string name="search_hint">検索</string>
    <string name="select_activity">ACTIVITYを選択します</string>
    <string name="root_pls">Rootクレメンス！</string>
    <string name="fuck_brightness_setting_success">ファック輝度とのコラボ完了しました！</string>
    <string name="fuck_brightness_setting_cancel">ファック輝度とのコラボ取り消ししました！</string>
    <string name="shortcut_create">ショートカット作成しました</string>




</resources>
