<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

        <View
                android:id="@+id/toolbarBackView"
                android:background="@color/red"
                android:layout_width="match_parent"
                android:layout_height="55dp"/>

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/red"
                android:elevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="55dp">

            <ImageView
                    android:id="@+id/toolbarIcon"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/screen_shot_setting_30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/toolbarText"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"/>
        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.sibyl.sasukehomeDominator.util.VerticalScrollView
                android:id="@+id/scrollView"
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:animateLayoutChanges="true"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/water_mark"
                        android:layout_marginBottom="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/waterMarkCheck"
                        android:text="@string/available"
                        android:layout_marginBottom="15dp"
                        android:buttonTint="@color/zi"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/waterMarkInputLayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/userNameLayout"
                            android:layout_width="0dp"
                            app:counterEnabled="true"
                            app:boxBackgroundColor="@color/red"
                            android:layout_weight="1"
                            app:hintAnimationEnabled="true"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/userName"
                                android:lines="1"
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                            android:text="\@"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phoneInfoLayout"
                            android:layout_width="0dp"
                            app:counterEnabled="true"
                            app:hintAnimationEnabled="true"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/phoneInfo"
                                android:lines="1"
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="35dp"
                        android:layout_height="1px"
                        android:background="@color/lighter_gray"/>

                <TextView
                        android:text="@string/timeout"
                        android:layout_marginBottom="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <RelativeLayout
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/seconds0"
                            android:layout_alignParentLeft="true"
                            android:text="0秒"
                            android:buttonTint="@color/zi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/seconds3"
                            android:buttonTint="@color/zi"
                            android:layout_centerHorizontal="true"
                            android:text="2秒"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/seconds5"
                            android:layout_alignParentRight="true"
                            android:buttonTint="@color/zi"
                            android:text="5秒"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </RelativeLayout>


                <Button
                        android:visibility="gone"
                        android:id="@+id/okBtn"
                        android:clickable="true"
                        android:elevation="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/red"
                        android:textColor="@color/white"
                        android:text="保存"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/dirSelectLayout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <View
                            android:layout_width="match_parent"
                            android:layout_marginTop="35dp"
                            android:layout_marginBottom="35dp"
                            android:layout_height="1px"
                            android:background="@color/lighter_gray"/>

                    <TextView
                            android:text="フォルダ"
                            android:layout_marginBottom="15dp"
                            android:textSize="18sp"
                            android:textColor="@color/red"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:id="@+id/dirSelectTv"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp"
                            android:textSize="18sp"
                            android:text="/..."
                            tools:text="/Pictures/ScreenShots/"
                            android:textColor="@color/black"
                            android:ellipsize="start"
                            android:drawablePadding="15dp"
                            android:drawableLeft="@drawable/ic_folder_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:id="@+id/blank"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"/>
            </LinearLayout>
        </com.sibyl.sasukehomeDominator.util.VerticalScrollView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:src="@drawable/save_icon_30dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:elevation="5dp"
                android:clickable="true"
                app:backgroundTint="@color/red"
                app:rippleColor="@color/colorPrimary"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <!--<com.melnykov.fab.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_margin="16dp"-->
        <!--android:src="@mipmap/ic_launcher"-->
        <!--fab:elevation="5dp"-->
        <!--fab:fab_colorNormal="#123"-->
        <!--fab:fab_colorPressed="#123"-->
        <!--fab:fab_colorRipple="#123"/>-->
    </RelativeLayout>
</LinearLayout>